<resources>
    <string name="app_name">Prometheus</string>
    <string name="banner_text">Enter your Details</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="date_of_birth">MM/DD/YYYY</string>
    <string name="select_date">Select Date</string>
    <string name="enter_password">Enter password</string>
    <string name="register">Register</string>
    <string name="clear">Clear</string>
</resources>