<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:id="@+id/main_activity"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="@color/banner_color"
        android:gravity="center_horizontal|center_vertical"
        android:paddingLeft="15dp"
        android:paddingTop="3dp"
        android:paddingRight="15dp"
        android:paddingBottom="3dp"
        android:text="@string/banner_text"
        android:textColor="@color/app_background"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:visibility="visible"
        app:autoSizeTextType="none"
        app:fontFamily="serif"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="150dp"
        android:layout_height="47dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toStartOf="@+id/last_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="150dp"
        android:layout_height="47dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toEndOf="@+id/first_name"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <EditText
        android:id="@+id/email"
        android:layout_width="330dp"
        android:layout_height="47dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name" />

    <RadioGroup
        android:id="@+id/genderGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="65dp"
        android:layout_marginRight="65dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email">

        <RadioButton
            android:id="@+id/radioMaleButton"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:checked="true"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radioFemaleButton"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/radioOtherButton"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:text="@string/other" />

    </RadioGroup>

    <EditText
        android:id="@+id/date_of_birth"
        android:layout_width="160dp"
        android:layout_height="47dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/date_of_birth"
        android:inputType="date"
        android:textColor="#000000"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderGroup" />

    <EditText
        android:id="@+id/password"
        android:layout_width="330dp"
        android:layout_height="47dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/enter_password"
        android:gravity="center_horizontal"
        android:inputType="textPassword"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_of_birth"/>

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#FF8E01"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/details_output"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="15dp"
        android:background="@color/banner_color"
        android:gravity="center_horizontal|center_vertical"
        android:paddingLeft="15dp"
        android:paddingTop="3dp"
        android:paddingRight="15dp"
        android:paddingBottom="3dp"
        android:textColor="@color/app_background"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:visibility="visible"
        app:autoSizeTextType="none"
        app:fontFamily="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register"
        tools:visibility="gone" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#FF8E01"
        android:text="@string/clear"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_output"
        tools:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>